# cmake-template

./: CMakeLists.txt  Makefile  README.md  main.cpp  my_library.cpp  my_library.h
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake
configured/: CMakeLists.txt  config.h.in
docs/: Doxyfile
src/: CMakeLists.txt  my_library.cpp
src/my_lib/: CMakeLists.txt  my_library.cpp  my_library.h
